# shopify-webhook-verification

./: README.md  pyproject.toml  verify.pyi
verifyshopify/: verify.py
