[tool.poetry]
name = "verifyshopify"
version = "0.1.4"
description = "This module provides a utility function to verify the authenticity of data received from Shopify webhooks. It uses HMAC (Hash-based Message Authentication Code) with SHA-256 hashing to ensure that the data has not been tampered with in transit."
authors = ["Zin Yosrim <zinyosrim@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/zinyosrim/shopify-webhook-verification"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Security",
]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
black = "^21.5b2"
pylint = "^2.8.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

